--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="lol/settings/index.html" class="nav-option"><i class="settings-icon fa fa-gear fa-2xl fa-fw"></i>Settings</a>
         <a href="lol/chat/index.html" class="nav-option"><i class="chat-icon fa fa-message fa-2xl fa-fw"></i>Chat</a>
         <a href="lol/movies/" class="nav-option"><i class="movies-icon fa-solid fa-clapperboard fa-2xl fa-fw"></i>Movies</a>
-        <a href="lol/misc" class="nav-option"><i class="movies-icon fa-solid fa-cubes fa-2xl fa-fw"></i>Misc</a>
+        <a href="/misc" class="nav-option"><i class="movies-icon fa-solid fa-cubes fa-2xl fa-fw"></i>Misc</a>
       </div>
     </nav>
     <div class="header-container">
